--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html{
 body{
     
     color: #fff;
-    background-image: url(images/rutru);
+    background-image: url(images/rutru.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
