--- a/style.css
+++ b/style.css
@@ -10,10 +10,8 @@ html{
 body{
     
     color: #fff;
-    bacground-color:Black;
-    background-image: url(images/portifolio.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
+ background: #ff004f;
+
 }
  #header{
     width: 100%;
