--- a/style.css
+++ b/style.css
@@ -8,9 +8,8 @@ html{
    scroll-behavior: smooth;
 }
 body{
-    
-    color: #fff;
- background: #ff004f;
+
+ background-color:black;
 
 }
  #header{
